--- a/viz_i.Rmd
+++ b/viz_i.Rmd
@@ -34,3 +34,160 @@ weather_df =
   )
 ```
 
+## Scatterplots
+
+Create my first scatter plot ever.
+
+```{r}
+ggplot(weather_df, aes(x=tmin, y= tmax)) +
+  geom_point()
+```
+
+New approach, same plot
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax)) +
+  geom_point()
+```
+
+Save and edit a plot object
+
+```{r}
+weather_plot =
+  weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax))
+
+weather_plot + geom_point()
+```
+
+##Advanced Scatterplot
+
+Start with the same one and make it fancy
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax, color=name)) +
+  geom_point() +
+  geom_smooth(se = FALSE)
+
+```
+
+What about the `aes` placement...?
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax)) +
+  geom_point(aes(color=name)) +
+  geom_smooth()
+
+```
+
+Let's facet some things
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax, color=name)) +
+  geom_point(alpha = 0.5, size = 0.5) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~name)
+
+```
+
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax, color=name, alpha = tmin)) +
+  geom_point() +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~name)
+
+```
+
+Let's combine some elements and try a new plot
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=date, y=tmax, color=name)) +
+  geom_point(aes(size=prcp, alpha=0.5))+
+  geom_smooth(se=FALSE)+
+  facet_grid(. ~name)
+```
+
+##Some small notes
+
+How many geoms have to exist?
+You can have whatever geoms you want
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax, color=name)) +
+  geom_smooth(se=FALSE)
+
+```
+
+You can use a neat geom!
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax)) +
+  geom_hex()+
+  facet_grid(. ~name)
+```
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax)) +
+  geom_density2d()+
+  geom_point(alpha=0.3)
+```
+
+##Univariate plots
+
+Histograms are really great.
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin)) +
+  geom_histogram()
+
+```
+
+Can we add color ...
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin,fill=name)) +
+  geom_histogram(position="dodge")
+
+```
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin,fill=name)) +
+  geom_histogram() +
+  facet_grid(. ~name)
+```
+
+Let's try a new geometry
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, fill=name)) +
+  geom_density(alpha=0.3, adjust=0.5)
+```
+
+What about boxplots?
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=name, y=tmin)) +
+  geom_boxplot()
+```
+
+Trendy plots :D
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=name, y=tmin, fill=name)) +
+  geom_violin(alpha=0.5) +
+  stat_summary()
+```
+
