--- a/viz_ii.Rmd
+++ b/viz_ii.Rmd
@@ -220,3 +220,64 @@ tmax_date_p =
 (tmax_tmin_p + prcp_dens_p) / tmax_date_p
 ```
 
+##Data manipulation
+
+Control your factors
+```{r}
+weather_df %>% 
+  mutate(
+    name=factor(name),
+    name = forcats::fct_relevel(name,c("Waikiki_HA"))
+  ) %>% 
+  ggplot(aes(y=tmax,x=name, fill=name))+
+  geom_violin(alpha=0.5)
+  
+```
+
+What if I wanted densities for tmin and tmax simultaneously?
+
+```{r}
+weather_df %>%
+  select(name, tmax, tmin) %>% 
+  pivot_longer(
+    tmax:tmin,
+    names_to = "observation", 
+    values_to = "temp") %>% 
+  ggplot(aes(x = temp, fill = observation)) +
+  geom_density(alpha = .5) + 
+  facet_grid(~name) + 
+  viridis::scale_fill_viridis(discrete = TRUE)
+```
+
+##Revisit the pups
+
+Data from the FAS study
+```{r}
+pup_data =
+  read_csv("./data/FAS_pups.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(sex=recode(sex, `1`="male",`2`="female"))
+
+litters =
+  read_csv("./data/FAS_litters.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(group, into = c("dose", "day_of_tx"),sep=3)
+
+fas_data = left_join(pup_data,litters,by="litter_number")
+
+fas_data %>% 
+  select(dose, day_of_tx, starts_with("pd_")) %>% 
+  pivot_longer(
+    pd_ears:pd_walk,
+    names_to = "outcome",
+    values_to ="pn_day"
+  ) %>% 
+  drop_na() %>% 
+  mutate(
+    outcome = forcats::fct_relevel(outcome, "pd_ears", "pd_pivot", "pd_walk", "pd_eyes")
+  ) %>% 
+  ggplot(aes(x=dose,y=pn_day, fill=dose))+
+  geom_violin()+
+  facet_grid(day_of_tx ~outcome)
+```
+
